@@ -1,3 +1,8 @@
+This is a mess.  I reverted 97da271b29941596da7b401c2ed7352de111dc10
+
+PCN
+
+<<<<<<< HEAD
 2.2.5
  * maxPurgeableTimestamp needs to check memtables too (CASSANDRA-9949)
  * Apply change to compaction throughput in real time (CASSANDRA-10025)
@@ -666,6 +671,8 @@ Merged from 2.0:
  * Bind JMX to localhost unless explicitly configured otherwise (CASSANDRA-9085)
 
 
+=======
+>>>>>>> parent of 97da271... Re-enable CASSANDRA-7688
 2.1.3
  * Fix HSHA/offheap_objects corruption (CASSANDRA-8719)
  * Upgrade libthrift to 0.9.2 (CASSANDRA-8685)
